2007-06-30  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* generic/tclThread.c: Prevent RemeberSyncObj() from growing the sync
	object lists by reusing already free'd slots, if possible.
	See discussion on Bug 1726873 for more information.

2007-06-29  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclAlloc.c:		on Darwin, ensure memory allocated by
	* generic/tclThreadAlloc.c:	the custom TclpAlloc()s is aligned to
	16 byte boundaries (as is the case with the Darwin system malloc).

2007-06-27  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclCmdMZ.c:	Corrected broken trace reversal logic in
	* generic/tclTest.c:	TclCheckInterpTraces that led to infinite loop
	* tests/basic.test:	when multiple Tcl_CreateTrace traces were set
	and one of them did not fire due to level restrictions.  [Bug 1743931].

2007-06-23  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/tclMacOSXNotify.c (AtForkChild): don't call CoreFoundation
	APIs after fork() on systems where that would lead to an abort().

2007-06-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* README: updated links. [Bug 1715081]

2007-06-06  Daniel Steffen  <das@users.sourceforge.net>

	* unix/configure.in (Darwin):		add plist for tclsh; link the
	* unix/Makefile.in  (Darwin):		Tcl and tclsh plists into their
	* macosx/Tclsh-Info.plist.in (new):	binaries in all cases.

	* unix/tcl.m4 (Darwin): fix CF checks in fat 32&64bit builds. 
	* unix/configure: autoconf-2.13

2007-06-05  Don Porter  <dgp@users.sourceforge.net>

	* tests/result.test (result-6.2): Add test for [Bug 1649062] so that
	8.4 and 8.5 both test the same outcome and we verify compatibility.

2007-05-30  Don Porter  <dgp@users.sourceforge.net>

	* README:		Bump version number to 8.4.16
	* generic/tcl.h:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/README.binary:
	* win/configure.in:

	* unix/configure:	autoconf-2.13
	* win/configure:

2007-05-29  Jeff Hobbs  <jeffh@ActiveState.com>
